tests/neg/dynamicNoImport.scala
class Foo extends scala.Dynamic // error
trait Bar extends scala.Dynamic // error
object Baz extends scala.Dynamic // error
